// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ConfirmButton ui button and icon: Component: ConfirmButton => ui => button and icon 1`] = `
<div
  style={
    Object {
      "display": "block",
    }
  }
>
  <Button
    color="danger"
    icon="delete"
    inProgress={false}
    onClick={[Function]}
  >
    Delete user
  </Button>
  <OpenCloseModal
    isOpen={false}
    label="Confirmation"
    onClose={[Function]}
    onSave={[Function]}
    text={
      Object {
        "cancel": "Cancel",
        "save": "Confirm",
      }
    }
  >
    <p>
      Are you sure you want to 
      <strong>
        delete
      </strong>
       the user?
    </p>
  </OpenCloseModal>
</div>
`;

exports[`Component: ConfirmButton ui custom class, color and texts: Component: ConfirmButton => ui => custom color and texts 1`] = `
<div
  className="bigger-better-and-uncut"
  style={
    Object {
      "display": "block",
    }
  }
>
  <Button
    color="info"
    icon="delete"
    inProgress={false}
    onClick={[Function]}
  >
    Delete user
  </Button>
  <OpenCloseModal
    isOpen={false}
    label="PLEASE SAY YES"
    onClose={[Function]}
    onSave={[Function]}
    text={
      Object {
        "cancel": "NO",
        "save": "YES",
      }
    }
  >
    <p>
      Are you sure you want to 
      <strong>
        delete
      </strong>
       the user?
    </p>
  </OpenCloseModal>
</div>
`;

exports[`Component: ConfirmButton ui only button: Component: ConfirmButton => ui => only button 1`] = `
<div
  style={
    Object {
      "display": "block",
    }
  }
>
  <Button
    color="danger"
    inProgress={false}
    onClick={[Function]}
  >
    Delete user
  </Button>
  <OpenCloseModal
    isOpen={false}
    label="Confirmation"
    onClose={[Function]}
    onSave={[Function]}
    text={
      Object {
        "cancel": "Cancel",
        "save": "Confirm",
      }
    }
  >
    <p>
      Are you sure you want to 
      <strong>
        delete
      </strong>
       the user?
    </p>
  </OpenCloseModal>
</div>
`;

exports[`Component: ConfirmButton ui only icon in progress: Component: ConfirmButton => ui => only icon in progress 1`] = `
<div
  style={
    Object {
      "display": "inline",
    }
  }
>
  <Button
    color="danger"
    icon="delete"
    inProgress={true}
    onClick={[Function]}
  />
  <OpenCloseModal
    isOpen={false}
    label="Confirmation"
    onClose={[Function]}
    onSave={[Function]}
    text={
      Object {
        "cancel": "Cancel",
        "save": "Confirm",
      }
    }
  >
    <p>
      Are you sure you want to 
      <strong>
        delete
      </strong>
       the user?
    </p>
  </OpenCloseModal>
</div>
`;

exports[`Component: ConfirmButton ui only icon: Component: ConfirmButton => ui => only icon 1`] = `
<div
  style={
    Object {
      "display": "inline",
    }
  }
>
  <Button
    color="danger"
    icon="delete"
    inProgress={false}
    onClick={[Function]}
  />
  <OpenCloseModal
    isOpen={false}
    label="Confirmation"
    onClose={[Function]}
    onSave={[Function]}
    text={
      Object {
        "cancel": "Cancel",
        "save": "Confirm",
      }
    }
  >
    <p>
      Are you sure you want to 
      <strong>
        delete
      </strong>
       the user?
    </p>
  </OpenCloseModal>
</div>
`;
